--- a/src/app/v2/modules/landing-page/landing-page.component.html
+++ b/src/app/v2/modules/landing-page/landing-page.component.html
@@ -67,7 +67,7 @@
     <div
       class="grid gap-x-8 gap-y-12 sm:gap-y-16 md:grid-cols-2 lg:grid-cols-3"
     >
-      <div class="relative mt-5 bg-gray-100 p-6">
+      <div class="relative mt-5 bg-gray-100 p-6  border ">
         <a routerLink="/registro-industria" class="block mb-3">
           <h2 class="text-2xl font-bold leading-5 text-black">
             Registro Empresas
@@ -81,7 +81,7 @@
           Registrarse
         </a>
       </div>
-      <div class="relative mt-5 bg-gray-100 p-6">
+      <div class="relative mt-5 bg-gray-100 p-6  border">
         <a routerLink="/registro-proveedor" class="block mb-3">
           <h2 class="text-2xl font-bold leading-5 text-black">
             Registro Proveedores
@@ -95,7 +95,7 @@
           Registrarse
         </a>
       </div>
-      <div class="relative mt-5 bg-gray-100 p-6">
+      <div class="relative mt-5 bg-gray-100 p-6  border">
         <a routerLink="/registro-persona" class="block mb-3">
           <h2 class="text-2xl font-bold leading-5 text-black">
             Registro Usuarios
