--- a/src/app/v2/modules/podcasts/podcasts.component.html
+++ b/src/app/v2/modules/podcasts/podcasts.component.html
@@ -122,7 +122,7 @@
     </section>
 
     <!-- Sección: Lista de Podcasts -->
-    <section class="bg-gray-100 p-6 shadow-lg">
+    <section class="bg-gray-100 p-6 border mt-5">
       <!-- Video seleccionado -->
       <div class="mb-6">
         <iframe
