Update registration section text for clarity and personalization

--- a/src/app/v2/components/sugeridos/sugeridos.component.html
+++ b/src/app/v2/components/sugeridos/sugeridos.component.html
@@ -23,7 +23,8 @@ this.currentUser()?.rol?.nombreRol === Role.Proveedor && this.modeloCaracter())
   <article class="bg-gray-100 p-4 border border">
     <h3 class="text-xl font-bold mb-2">Registrate</h3>
     <p class="text-gray-600 mb-4">
-      Registrate para acceder nuevos modelos de madurez y recomendaciones
+      Registrate para acceder a nuestros Modelos de Evaluación
+      y recomendaciones personalizadas.
     </p>
     <a
       routerLink="/registro"
