--- a/src/app/v2/modules/informe/informe.component.html
+++ b/src/app/v2/modules/informe/informe.component.html
@@ -64,25 +64,25 @@
   </div>
 </div>
 
-<!-- Header -->
-<header class="bg-blue-600">
-  <div class="container mx-auto px-4 py-6">
-    <h1 class="text-white text-4xl font-bold">
-      Informe sobre la Industria 4.0 en la Región de Los Lagos
-    </h1>
-    <p class="text-blue-200 mt-2 text-lg">
-      Análisis del ecosistema de manufactura avanzada y sus desafíos
-    </p>
-  </div>
-</header>
 <!-- Contenido principal -->
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Sección de búsqueda y resultados -->
-  <div class="container mx-auto px-4 py-8">
+  <div class="w-full lg:w-3/4 pr8 p-8">
+    <!-- Header -->
+    <header>
+      <div class="container mx-auto py-4">
+        <h1 class="text-gray text-4xl font-bold">
+          Informe sobre la Industria 4.0 en la Región de Los Lagos
+        </h1>
+        <p class="text-gray-700 mt-2 text-lg">
+          Análisis del ecosistema de manufactura avanzada y sus desafíos
+        </p>
+      </div>
+    </header>
     <!-- Sección: Introducción -->
     <section class="mb-12">
-      <h2 class="text-3xl font-bold text-gray-800 mb-6">Introducción</h2>
-      <div class="bg-white p-6 rounded-lg shadow-lg">
+      <div class="bg-white py-2">
+        <h2 class="text-3xl font-bold text-gray-800 mb-6">Introducción</h2>
         <p class="text-gray-700 leading-relaxed">
           Este informe, elaborado junto a <strong>CORFO</strong>,
           <strong>ASIMET</strong>, la
@@ -99,10 +99,10 @@
 
     <!-- Sección: Brechas en la Adopción de Tecnologías 4.0 -->
     <section class="mb-12">
-      <h2 class="text-3xl font-bold text-gray-800 mb-6">
-        Brechas en la Adopción de Tecnologías 4.0
-      </h2>
-      <div class="bg-white p-6 rounded-lg shadow-lg">
+      <div class="bg-white py-2">
+        <h2 class="text-3xl font-bold text-gray-800 mb-6">
+          Brechas en la Adopción de Tecnologías 4.0
+        </h2>
         <p class="text-gray-700 leading-relaxed mb-4">
           <strong
             >Uno de los puntos clave es la identificación de las brechas que
@@ -123,10 +123,10 @@
 
     <!-- Sección: Sectores Clave de la Economía Regional -->
     <section class="mb-12">
-      <h2 class="text-3xl font-bold text-gray-800 mb-6">
-        Sectores Clave de la Economía Regional
-      </h2>
-      <div class="bg-white p-6 rounded-lg shadow-lg">
+      <div class="bg-white py-2">
+        <h2 class="text-3xl font-bold text-gray-800 mb-6">
+          Sectores Clave de la Economía Regional
+        </h2>
         <p class="text-gray-700 leading-relaxed mb-4">
           <strong
             >El informe también detalla cinco sectores clave de la economía
@@ -146,10 +146,10 @@
 
     <!-- Sección: Fuente de Información -->
     <section class="mb-12">
-      <h2 class="text-3xl font-bold text-gray-800 mb-6">
-        Fuente de Información
-      </h2>
-      <div class="bg-white p-6 rounded-lg shadow-lg">
+      <div class="bg-white py-2">
+        <h2 class="text-3xl font-bold text-gray-800 mb-6">
+          Fuente de Información
+        </h2>
         <p class="text-gray-700 leading-relaxed mb-4">
           <strong
             >La información del informe proviene de encuestas a empresas de
@@ -169,10 +169,10 @@
 
     <!-- Sección: Objetivo del Informe -->
     <section class="mb-12">
-      <h2 class="text-3xl font-bold text-gray-800 mb-6">
-        Objetivo del Informe
-      </h2>
-      <div class="bg-white p-6 rounded-lg shadow-lg">
+      <div class="bg-white py-2">
+        <h2 class="text-3xl font-bold text-gray-800 mb-6">
+          Objetivo del Informe
+        </h2>
         <p class="text-gray-700 leading-relaxed mb-4">
           <strong
             >El informe pretende aportar una visión clara sobre el estado de la
@@ -197,7 +197,7 @@
               'https://drive.google.com/file/d/1Ct-dBUZZ2nejjTZ7FNbhrLr45POtNnnN/view?usp=sharing'
             )
           "
-          class="inline-block bg-blue-600 text-white font-bold py-3 px-6 shadow-lg hover:bg-blue-700 transition duration-300"
+          class="inline-block bg-blue-600 text-white font-bold py-3 px-6 hover:bg-blue-700 transition duration-300"
         >
           <svg
             class="inline-block w-6 h-6 mr-2"
