Refactor navbar and sponsors sections for improved styling and consistency; add fade-in animation to suggested articles

--- a/src/app/v2/components/navbar/navbar.component.html
+++ b/src/app/v2/components/navbar/navbar.component.html
@@ -235,7 +235,7 @@
       @if (authState()===AuthState.LoggedOut) {
       <a
         routerLink="/registro"
-        class="hidden md:inline-block bg-yellow-500 hover:bg-yellow-600 text-gray-800 font-bold py-2 px-4 ml-4 border border-yellow-700 rounded shadow-md transform hover:scale-105 transition-transform duration-200"
+        class="hidden md:inline-block bg-yellow-500  text-gray-800 font-bold py-3 px-4 ml-4 border border-yellow-700  "
       >
         Registrarse
       </a>
