--- a/src/app/v2/components/patrocinadores/patrocinadores.component.html
+++ b/src/app/v2/components/patrocinadores/patrocinadores.component.html
@@ -1,5 +1,5 @@
 <!-- Sección de patrocinadores -->
-<div class="w-full bg-gray-100 py-10">
+<div class="w-full bg-gray-100 py-4">
   <div class="max-w-full px-6">
     <div class="flex flex-col items-center">
       <!-- Encabezado y descripción -->
@@ -12,7 +12,7 @@
       </div>
       <!-- Sección de logos de patrocinadores -->
       <div
-        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 gap-12 mt-16"
+        class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 gap-12 "
       >
         <div class="flex items-center justify-center" key="Santo Tomás">
           <img
