--- a/src/app/v2/modules/informe/informe.component.html
+++ b/src/app/v2/modules/informe/informe.component.html
@@ -83,7 +83,7 @@
     <section class="mb-12">
       <div class="bg-white py-2">
         <h2 class="text-3xl font-bold text-gray-800 mb-6">Introducción</h2>
-        <p class="text-gray-700 leading-relaxed">
+        <p class="text-gray-700 leading-relaxed text-justify">
           Este informe, elaborado junto a <strong>CORFO</strong>,
           <strong>ASIMET</strong>, la
           <strong>Universidad Santo Tomás (Puerto Montt)</strong> y
@@ -103,7 +103,7 @@
         <h2 class="text-3xl font-bold text-gray-800 mb-6">
           Brechas en la Adopción de Tecnologías 4.0
         </h2>
-        <p class="text-gray-700 leading-relaxed mb-4">
+        <p class="text-gray-700 leading-relaxed mb-4  text-justify">
           <strong
             >Uno de los puntos clave es la identificación de las brechas que
             frenan la adopción de tecnologías 4.0 en la región.</strong
@@ -112,7 +112,7 @@
           escasez de personal capacitado, la incertidumbre económica y la
           adaptación a la innovación tecnológica.
         </p>
-        <p class="text-gray-700 leading-relaxed">
+        <p class="text-gray-700 leading-relaxed  text-justify">
           Para superar estos desafíos, el informe subraya la necesidad de
           fortalecer las políticas de apoyo financiero y formación tecnológica,
           además de fomentar una cultura de colaboración entre empresas e
@@ -127,7 +127,7 @@
         <h2 class="text-3xl font-bold text-gray-800 mb-6">
           Sectores Clave de la Economía Regional
         </h2>
-        <p class="text-gray-700 leading-relaxed mb-4">
+        <p class="text-gray-700 leading-relaxed mb-4  text-justify">
           <strong
             >El informe también detalla cinco sectores clave de la economía
             regional: acuicultura, construcción, silvoagropecuario, manufactura
@@ -136,7 +136,7 @@
           Para cada uno, se describen sus características, desafíos y
           oportunidades frente a la adopción de tecnologías 4.0.
         </p>
-        <p class="text-gray-700 leading-relaxed">
+        <p class="text-gray-700 leading-relaxed  text-justify">
           Se incluyen ejemplos de innovaciones como robots de ordeño, drones
           para la cosecha de manzanas y sistemas de nanoburbujas para
           oxigenación en la acuicultura.
@@ -150,7 +150,7 @@
         <h2 class="text-3xl font-bold text-gray-800 mb-6">
           Fuente de Información
         </h2>
-        <p class="text-gray-700 leading-relaxed mb-4">
+        <p class="text-gray-700 leading-relaxed mb-4  text-justify">
           <strong
             >La información del informe proviene de encuestas a empresas de
             distintos sectores, incluyendo la manufactura y el acuícola.</strong
@@ -159,7 +159,7 @@
           de tecnologías, y las barreras y oportunidades que enfrentan las
           empresas en su camino hacia la transformación digital.
         </p>
-        <p class="text-gray-700 leading-relaxed">
+        <p class="text-gray-700 leading-relaxed  text-justify">
           Los resultados son una herramienta valiosa para entender las
           necesidades del sector y diseñar estrategias que impulsen la adopción
           de tecnologías avanzadas.
@@ -173,7 +173,7 @@
         <h2 class="text-3xl font-bold text-gray-800 mb-6">
           Objetivo del Informe
         </h2>
-        <p class="text-gray-700 leading-relaxed mb-4">
+        <p class="text-gray-700 leading-relaxed mb-4  text-justify">
           <strong
             >El informe pretende aportar una visión clara sobre el estado de la
             manufactura avanzada e industria 4.0 en la Región de Los
@@ -183,7 +183,7 @@
           decisiones estratégicas que promuevan un desarrollo económico
           sostenible.
         </p>
-        <p class="text-gray-700 leading-relaxed">
+        <p class="text-gray-700 leading-relaxed  text-justify">
           El informe completo está disponible para su consulta, y se espera que
           sea un recurso útil para empresas, instituciones públicas y actores
           del ecosistema de innovación de la región.
