--- a/src/app/v2/modules/course-search/course-search.component.html
+++ b/src/app/v2/modules/course-search/course-search.component.html
@@ -66,7 +66,7 @@
 <!-- Contenido dinámico -->
 <main class="container mx-auto py-12 flex flex-col lg:flex-row">
   <!-- Search and Results -->
-  <div class="w-full lg:w-3/4 pr8 p-8">
+  <div class="w-full lg:w-3/4 pr8 px-8">
     <h2 class="text-2xl font-bold mb-6">Cursos</h2>
     <!-- Tips y Mensajes Dinámicos -->
     <div class="mb-3 position-relative" style="min-height: 1.5em">
@@ -166,9 +166,7 @@
       <span
         style="padding: 4px 12px"
         class="badge border border-blue-100 text-blue-600 px-2 py-1 text-xs suggested-term me-2 mb-2 text-xs"
-        *ngFor="
-          let term of ['online', 'presencial', 'gratuito', 'de pago', 'ingles']
-        "
+        *ngFor="let term of searchKeywords"
         (click)="addSuggestedTerm(term)"
         (keypress)="handleKeyPress($event, term)"
         tabindex="0"
@@ -204,132 +202,15 @@
 
     <!-- Resultados de búsqueda simulados -->
     <div class="space-y-8">
-      <!-- Resultado 1 -->
-
       @for (item of results; track $index) {
-      <div
-        class="group"
-        (click)="openModal($index)"
-        (keypress.enter)="openModal($index)"
-        (keypress.space)="openModal($index)"
+      <app-course-item
+        class="p-4"
+        [course]="item"
+        (openModal)="openModal($index)"
       >
-        <a
-          style="cursor: pointer"
-          class="text-xl font-semibold text-blue-600 hover:underline"
-        >
-          {{ item.titulo }}
-        </a>
-
-        <!-- Etiquetas de los cursos -->
-        <p class="mb-1 flex flex-wrap gap-1">
-          <span
-            *ngIf="item.idioma.toLowerCase() === 'ingles'"
-            class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
-            >En Inglés</span
-          >
-          <span
-            *ngIf="item.tipo.toLowerCase() === 'de pago'"
-            class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
-            >De Pago</span
-          >
-          <span
-            *ngIf="item.tipo.toLowerCase() === 'gratuito'"
-            class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
-            >Gratuito</span
-          >
-          <span
-            *ngIf="item.modalidad.toLowerCase() === 'online'"
-            class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
-            >Online</span
-          >
-          <span
-            *ngIf="item.modalidad.toLowerCase() === 'presencial'"
-            class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
-            >Presencial</span
-          >
-          @for (tipo of item.tipo_de_conocimiento; track $index) {
-          <span
-            style="margin-right: 4px"
-            class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
-          >
-            {{ tipo }}
-          </span>
-          }
-        </p>
-
-        <!-- Descripción del curso -->
-        <span
-          [innerHTML]="
-            sanitizedDescripcion(item.descripcion | truncate : 400 : true)
-          "
-        ></span>
-        <p>
-          <small style="color: gray" class="text-secondary"
-            >Sitio web: {{ getDomain(item.link) }}</small
-          >
-        </p>
-      </div>
+      </app-course-item>
       }
     </div>
-    <!-- Paginación -->
-    <!--
-    <ol class="flex text-xs font-medium space-x-1 mt-5">
-      <li>
-        <a
-          routerLink="/?page=1"
-          class="inline-flex items-center justify-center w-8 h-8 border border-gray-100 rounded"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="w-3 h-3"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
-              clip-rule="evenodd"
-            ></path></svg
-        ></a>
-      </li>
-      <li
-        class="block w-8 h-8 text-center border border-gray-100 rounded leading-8"
-      >
-        <a routerLink="/?page=1" class="block">1</a>
-      </li>
-      <li
-        class="block w-8 h-8 text-center text-white bg-blue-600 border-blue-600 rounded leading-8"
-      >
-        <a routerLink="/?page=2" class="">2</a>
-      </li>
-      <li
-        class="block w-8 h-8 text-center border border-gray-100 rounded leading-8"
-      >
-        <a routerLink="/?page=3" class="block">3</a>
-      </li>
-      <li
-        class="block w-8 h-8 text-center border border-gray-100 rounded leading-8"
-      >
-        <a routerLink="/?page=4" class="block">4</a>
-      </li>
-      <li>
-        <a
-          routerLink="/?page=3"
-          class="inline-flex items-center justify-center w-8 h-8 border border-gray-100 rounded"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="w-3 h-3"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-              clip-rule="evenodd"
-            ></path></svg
-        ></a>
-      </li>
-    </ol>
-    -->
   </div>
   <!-- Artículos sugeridos -->
   <app-sugeridos></app-sugeridos>
@@ -337,7 +218,7 @@
 
 <div
   id="large-modal"
-  *ngIf="isModalOpen && courseModal"
+  *ngIf="isModalOpen && dataModal"
   tabindex="-1"
   class="fixed top-0 left-0 right-0 z-50 w-full p-4 overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full flex items-center justify-center bg-black bg-opacity-50"
 >
@@ -349,7 +230,7 @@
         class="flex items-center justify-between p-4 md:p-5 border-b rounded-t"
       >
         <h3 class="text-xl font-semibold text-blue-900">
-          {{ courseModal.titulo }}
+          {{ dataModal.titulo }}
         </h3>
         <button
           type="button"
@@ -379,31 +260,31 @@
       <div class="p-4 md:p-5 space-y-4">
         <p class="mb-1 flex flex-wrap gap-1">
           <span
-            *ngIf="courseModal.idioma.toLowerCase() === 'ingles'"
+            *ngIf="dataModal.idioma.toLowerCase() === 'ingles'"
             class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
             >En Inglés</span
           >
           <span
-            *ngIf="courseModal.tipo.toLowerCase() === 'de pago'"
+            *ngIf="dataModal.tipo.toLowerCase() === 'de pago'"
             class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
             >De Pago</span
           >
           <span
-            *ngIf="courseModal.tipo.toLowerCase() === 'gratuito'"
+            *ngIf="dataModal.tipo.toLowerCase() === 'gratuito'"
             class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
             >Gratuito</span
           >
           <span
-            *ngIf="courseModal.modalidad.toLowerCase() === 'online'"
+            *ngIf="dataModal.modalidad.toLowerCase() === 'online'"
             class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
             >Online</span
           >
           <span
-            *ngIf="courseModal.modalidad.toLowerCase() === 'presencial'"
+            *ngIf="dataModal.modalidad.toLowerCase() === 'presencial'"
             class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
             >Presencial</span
           >
-          @for (tipo of courseModal.tipo_de_conocimiento; track $index) {
+          @for (tipo of dataModal.tipo_de_conocimiento; track $index) {
           <span
             style="margin-right: 4px"
             class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
@@ -412,18 +293,18 @@
           </span>
           }
         </p>
-        <p><strong>Entidad:</strong> {{ courseModal.entidad }}</p>
-        <p><strong>Nivel:</strong> {{ courseModal.nivel }}</p>
-        <p><strong>Idioma:</strong> {{ courseModal.idioma }}</p>
-        <p><strong>Duración:</strong> {{ courseModal.duracion }}</p>
+        <p><strong>Entidad:</strong> {{ dataModal.entidad }}</p>
+        <p><strong>Nivel:</strong> {{ dataModal.nivel }}</p>
+        <p><strong>Idioma:</strong> {{ dataModal.idioma }}</p>
+        <p><strong>Duración:</strong> {{ dataModal.duracion }}</p>
         <!-- Descripción del curso -->
         <p><strong>Descripción:</strong></p>
         <span
-          [innerHTML]="sanitizedDescripcion(courseModal.descripcion)"
+          [innerHTML]="recursosService.sanitizedString(dataModal.descripcion)"
         ></span>
         <p>
           <small style="color: gray" class="text-secondary"
-            >Sitio web: {{ getDomain(courseModal.link) }}</small
+            >Sitio web: {{ recursosService.getDomain(dataModal.link) }}</small
           >
         </p>
       </div>
@@ -435,7 +316,7 @@
         <button
           data-modal-hide="large-modal"
           type="button"
-          (click)="openLink(courseModal.link)"
+          (click)="recursosService.openLink(dataModal.link)"
           style="gap: 6px; padding: 8px 16px"
           class="border border-blue-100 text-blue bg-blue-white hover:bg-white-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center"
         >
@@ -459,7 +340,7 @@
         </button>
         <button
           type="button"
-          (click)="showNextCourse()"
+          (click)="showNextItem()"
           class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
         >
           Siguiente
