--- a/src/app/v2/components/course-modal/course-modal.component.html
+++ b/src/app/v2/components/course-modal/course-modal.component.html
@@ -1,7 +1,6 @@
 <div
-  id="large-modal"
   tabindex="-1"
-  class="fixed top-0 left-0 right-0 z-50 w-full p-4 overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full flex items-center justify-center bg-black bg-opacity-50"
+  class="fixed top-0 left-0 right-0 z-50 w-full p-4 overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full flex items-center justify-center bg-black bg-opacity-20"
 >
   <div class="relative w-full max-w-4xl max-h-full">
     <!-- Modal content -->
@@ -75,7 +74,9 @@
         <!-- Descripción del curso -->
         <p><strong>Descripción:</strong></p>
         <span
-          [innerHTML]="recursosService.sanitizedString(course.descripcion)"
+          [innerHTML]="
+            recursosService.sanitizedString(course.descripcion, true)
+          "
         ></span>
         <p>
           <small style="color: gray" class="text-secondary">
