--- a/src/app/v2/components/sugeridos/sugeridos.component.html
+++ b/src/app/v2/components/sugeridos/sugeridos.component.html
@@ -27,14 +27,15 @@ this.currentUser()?.rol?.nombreRol === Role.Empresa && this.modeloMadurez() &&
   <app-course-item
     class="p-4"
     [simplified]="true"
-    [course]="item"
+    [data]="item"
     (openModal)="openModal($index)"
   >
   </app-course-item>
   <!--modal-->
   <app-course-modal
     *ngIf="isModalOpen && dataModal"
-    [course]="dataModal"
+    [data]="dataModal"
+    [showNext]="false"
     (close)="closeModal()"
   ></app-course-modal>
   }
@@ -391,128 +392,21 @@ this.currentUser()?.rol?.nombreRol === Role.Empresa && this.modeloMadurez() &&
   }
   <!--articulos-->
   @if (item?.articulo_paper) {
-  <article class="bg-gray-100 p-4 border">
-    <h3 class="text-xl font-bold mb-2">{{ item?.titulo }}</h3>
-    <span
-      style="font-size: 0.9rem"
-      [innerHTML]="item.resumen | truncate : 120 : true"
-    >
-    </span>
-    <p style="height: 12px"></p>
-    <a
-      style="cursor: pointer"
-      (click)="openModal($index)"
-      (keypress.enter)="openModal($index)"
-      (keypress.space)="openModal($index)"
-      class="font-bold py-2 text-blue-500 transition duration-300 ease-in-out transform hover:scale-105"
-    >
-      Ver Más
-    </a>
-  </article>
-  <div
-    id="large-modal"
-    *ngIf="isModalOpen && dataModal"
-    tabindex="-1"
-    class="fixed top-0 left-0 right-0 z-50 w-full p-4 overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full flex items-center justify-center bg-black bg-opacity-50"
+  <app-article-item
+    class="p-4"
+    [simplified]="true"
+    [data]="item"
+    (openModal)="openModal($index)"
   >
-    <div class="relative w-full max-w-4xl max-h-full">
-      <!-- Modal content -->
-      <div class="relative bg-white rounded-lg shadow">
-        <!-- Modal header -->
-        <div
-          class="flex items-center justify-between p-4 md:p-5 border-b rounded-t"
-        >
-          <h3 class="text-xl font-semibold text-blue-900">
-            {{ dataModal.titulo }}
-          </h3>
-          <button
-            type="button"
-            class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
-            data-modal-hide="large-modal"
-            (click)="closeModal()"
-          >
-            <svg
-              class="w-3 h-3"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 14 14"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
-              />
-            </svg>
-            <span class="sr-only">Close modal</span>
-          </button>
-        </div>
-        <!-- Modal body -->
-        <div class="p-4 md:p-5 space-y-4">
-          <p class="mb-1 flex flex-wrap gap-1">
-            <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
-              >Idioma: {{ dataModal.idioma }}</span
-            >
-            <span
-              *ngIf="dataModal.articulo_paper.toLowerCase() === 'paper'"
-              class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
-              >Paper</span
-            >
-            <span
-              *ngIf="dataModal.articulo_paper.toLowerCase() === 'articulo'"
-              class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
-              >Artículo</span
-            >
-            <span class="border border-blue-100 text-blue-600 px-2 py-1 text-xs"
-              >Nivel: {{ dataModal.nivel }}</span
-            >
-          </p>
-          <p style="text-align: center"></p>
-          <p><strong>Resumen:</strong></p>
-          <span [innerHTML]="sanitizedResumen(dataModal.resumen)"></span>
-          <p>
-            <small style="color: gray" class="text-secondary"
-              >Sitio web: {{ getDomain(dataModal.link) }} |
-              {{ getPublicationYear(dataModal.fecha_publicacion) }}</small
-            >
-          </p>
-        </div>
-        <!-- Modal footer -->
-        <div
-          style="width: 100%; justify-content: right"
-          class="flex items-center p-4 md:p-5 space-x-3 rtl:space-x-reverse border-t border-gray-200 rounded-b"
-        >
-          <button
-            data-modal-hide="large-modal"
-            type="button"
-            (click)="openLink(dataModal.link)"
-            style="gap: 6px; padding: 8px 16px"
-            class="border border-blue-100 text-blue bg-blue-white hover:bg-white-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center"
-          >
-            <svg
-              class="w-6 h-6 text-blue-800"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M8.64 4.737A7.97 7.97 0 0 1 12 4a7.997 7.997 0 0 1 6.933 4.006h-.738c-.65 0-1.177.25-1.177.9 0 .33 0 2.04-2.026 2.008-1.972 0-1.972-1.732-1.972-2.008 0-1.429-.787-1.65-1.752-1.923-.374-.105-.774-.218-1.166-.411-1.004-.497-1.347-1.183-1.461-1.835ZM6 4a10.06 10.06 0 0 0-2.812 3.27A9.956 9.956 0 0 0 2 12c0 5.289 4.106 9.619 9.304 9.976l.054.004a10.12 10.12 0 0 0 1.155.007h.002a10.024 10.024 0 0 0 1.5-.19 9.925 9.925 0 0 0 2.259-.754 10.041 10.041 0 0 0 4.987-5.263A9.917 9.917 0 0 0 22 12a10.025 10.025 0 0 0-.315-2.5A10.001 10.001 0 0 0 12 2a9.964 9.964 0 0 0-6 2Zm13.372 11.113a2.575 2.575 0 0 0-.75-.112h-.217A3.405 3.405 0 0 0 15 18.405v1.014a8.027 8.027 0 0 0 4.372-4.307ZM12.114 20H12A8 8 0 0 1 5.1 7.95c.95.541 1.421 1.537 1.835 2.415.209.441.403.853.637 1.162.54.712 1.063 1.019 1.591 1.328.52.305 1.047.613 1.6 1.316 1.44 1.825 1.419 4.366 1.35 5.828Z"
-                clip-rule="evenodd"
-              />
-            </svg>
-
-            Ir al artículo
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
+  </app-article-item>
+  <!--modal-->
+  <app-article-modal
+    *ngIf="isModalOpen && dataModal"
+    [data]="dataModal"
+    [showNext]="false"
+    (close)="closeModal()"
+  >
+  </app-article-modal>
   }
 
   <!--proyecto-->
